// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render TextArea 1`] = `
<div
  className="c-textarea -size-128 -view-flat -color-primary -disabled"
>
  <textarea
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    style={Object {}}
  />
</div>
`;

exports[`TextArea should render TextArea with height 1`] = `
<div
  className="c-textarea -size-128 -view-flat -color-primary -disabled"
>
  <textarea
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "height": "200px",
      }
    }
  />
</div>
`;
